logs_tests/doc_ycsb_cockroachdb_2_summary.txt
## Show Summary

### Workload
YCSB SF=1
    Type: ycsb
    Duration: 12490s 
    Code: 1744896360
    YCSB tool runs the benchmark.
    This experiment compares run time and resource consumption of YCSB queries.
    Workload is 'A'.
    Number of rows to insert is 1000000.
    Number of operations is 10000000.
    Batch size is ''.
    Target is based on multiples of '16384'.
    Factors for loading are [4].
    Factors for benchmarking are [4].
    Experiment uses bexhoma version 0.8.4.
    System metrics are monitored by a cluster-wide installation.
    Benchmark is limited to DBMS ['CockroachDB'].
    Import is handled by 8 processes (pods).
    Loading is fixed to cl-worker19.
    Benchmarking is fixed to cl-worker19.
    SUT is fixed to cl-worker11.
    Database is persisted to disk of type shared and size 50Gi.
    Loading is tested with [64] threads, split into [8] pods.
    Benchmarking is tested with [64] threads, split into [1] pods.
    Benchmarking is run as [1] times the number of benchmarking pods.
    Experiment is run 2 times.

### Connections
CockroachDB-64-8-65536-1-1 uses docker image cockroachdb/cockroach:v24.2.4
    RAM:541008592896
    Cores:64
    host:5.15.0-134-generic
    node:cl-worker11
    disk:202353232
    volume_size:50G
    requests_cpu:4
    requests_memory:16Gi
    client:1
    numExperiment:1
    worker 0
        RAM:2164173475840
        Cores:224
        host:6.8.0-57-generic
        node:cl-worker36
        disk:377155880
        datadisk:227379
        volume_size:50G
        volume_used:1.9G
    worker 1
        RAM:1081965461504
        Cores:256
        host:5.15.0-1073-nvidia
        node:cl-worker27
        disk:1350329568
        datadisk:227317
        volume_size:50G
        volume_used:1.8G
    worker 2
        RAM:1077382836224
        Cores:256
        host:6.8.0-1025-nvidia
        node:cl-worker28
        disk:1051121268
        datadisk:227318
        volume_size:50G
        volume_used:1.8G
    eval_parameters
        code:1744896360
        BEXHOMA_REPLICAS:3
        BEXHOMA_WORKERS:3
CockroachDB-64-8-65536-2-1 uses docker image cockroachdb/cockroach:v24.2.4
    RAM:541008592896
    Cores:64
    host:5.15.0-134-generic
    node:cl-worker11
    disk:202353388
    volume_size:50G
    requests_cpu:4
    requests_memory:16Gi
    client:1
    numExperiment:2
    worker 0
        RAM:2164173475840
        Cores:224
        host:6.8.0-57-generic
        node:cl-worker36
        disk:377217084
        datadisk:227385
        volume_size:50G
        volume_used:1.9G
    worker 1
        RAM:1077382836224
        Cores:256
        host:6.8.0-1025-nvidia
        node:cl-worker28
        disk:1051119640
        datadisk:227386
        volume_size:50G
        volume_used:1.9G
    worker 2
        RAM:1081965461504
        Cores:256
        host:5.15.0-1073-nvidia
        node:cl-worker27
        disk:1350328680
        datadisk:227385
        volume_size:50G
        volume_used:1.9G
    worker 3
        node:cl-worker4
    eval_parameters
        code:1744896360
        BEXHOMA_REPLICAS:3
        BEXHOMA_WORKERS:3

### Loading
                        experiment_run  threads  target  pod_count  exceptions  [OVERALL].Throughput(ops/sec)  [OVERALL].RunTime(ms)  [INSERT].Return=OK  [INSERT].99thPercentileLatency(us)
CockroachDB-64-8-65536               1       64   65536          8           0                     555.105016              1802379.0             1000000                            623871.0
list index out of range
Error in bexhoma-benchmarker-cockroachdb-64-8-65536-1744896360-1-1-887jz.dbmsbenchmarker.log
{}
list index out of range
Error in bexhoma-benchmarker-cockroachdb-64-8-65536-1744896360-2-1-7mhfh.dbmsbenchmarker.log
{}
list index out of range
Error in bexhoma-benchmarker-cockroachdb-64-8-65536-1744896360-1-1-887jz.dbmsbenchmarker.log
{}
list index out of range
Error in bexhoma-benchmarker-cockroachdb-64-8-65536-1744896360-2-1-7mhfh.dbmsbenchmarker.log
{}
Traceback (most recent call last):
  File "/home/perdelt/repositories/Benchmark-Experiment-Host-Manager/ycsb.py", line 971, in <module>
    experiment.show_summary()
  File "/home/perdelt/repositories/Benchmark-Experiment-Host-Manager/bexhoma/experiments.py", line 2944, in show_summary
    df = self.evaluator.get_df_benchmarking()
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/perdelt/repositories/Benchmark-Experiment-Host-Manager/bexhoma/evaluators.py", line 429, in get_df_benchmarking
    df = pd.read_pickle(filename_full)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/perdelt/anaconda3/envs/dbmsbenchmarker/lib/python3.11/site-packages/pandas/io/pickle.py", line 185, in read_pickle
    with get_handle(
         ^^^^^^^^^^^
  File "/home/perdelt/anaconda3/envs/dbmsbenchmarker/lib/python3.11/site-packages/pandas/io/common.py", line 882, in get_handle
    handle = open(handle, ioargs.mode)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
FileNotFoundError: [Errno 2] No such file or directory: '/home/perdelt/benchmarks/1744896360/bexhoma-benchmarker.all.df.pickle'
